--- a/Tesis/discusion.tex
+++ b/Tesis/discusion.tex
@@ -17,7 +17,7 @@
 
 La principal fortaleza de la metodología empleada radica en la utilización de un formulario estandarizado y previamente validado. Se tiene una alta confianza en que dicho formulario mide de manera efectiva lo que busca evaluar, como se validó a través de la alfa $\alpha$ de Cronbach, medida en el trabajo de Petri et al. \cite{MeegaPlusManual}. Esta medida indica que las preguntas evalúan efectivamente lo que el cuestionario buscan evaluar \cite{MeegaPlusManual}. Esta metodología proporciona una valoración numérica de la calidad del juego según las opiniones de los usuarios, representando este valor numérico como un rasgo latente (latent trait) comúnmente denotado como $\theta$ en IRT \cite{maldonado2021statistical, RashMeasurementTheoryAndrichMarais}.
 
-El proceso de diseño se considera robusto, ya que incorporó retroalimentación de expertos y la aplicación de la metodología de "Loud Thinking" en cada iteración. Esto permitió que los jugadores se familiarizaran adecuadamente con el juego, culminando en la exitosa realización de la prueba escrita. Se ha comprobado empíricamente cómo la usabilidad mejoró en cada fase del desarrollo.
+El proceso de diseño se considera robusto, ya que incorporó retroalimentación de expertos y la aplicación de la metodología de ``Loud Thinking'' en cada iteración. Esto permitió que los jugadores se familiarizaran adecuadamente con el juego, culminando en la exitosa realización de la prueba escrita. Se ha comprobado empíricamente cómo la usabilidad mejoró en cada fase del desarrollo.
 
 Además, el proceso está rigurosamente documentado, ya que la historia completa del desarrollo se encuentra disponible en un repositorio de Github \cite{GithubRepo}. Esto posibilita que cada iteración del juego sea reproducible, incluso los experimentos con usuarios, lo que permite a otros investigadores volver a versiones anteriores del videojuego y realizar pruebas con diferentes grupos de usuarios en cada instancia.
 
@@ -25,11 +25,12 @@ Además, el proceso está rigurosamente documentado, ya que la historia completa
 
 Una debilidad identificada es que la prueba académica no logró detectar diferencias entre los grupos, asignando un puntaje perfecto a todos los estudiantes. Se proponen dos metodologías para mejorar la precisión de los resultados:
 
-1) Aplicar A/B testing, comparando la metodología del videojuego educativo con otra aplicación o la lectura de un artículo relacionado con la misma materia que busca enseñar el videojuego. Luego, evaluar a los estudiantes con un examen escrito más extenso para establecer una graduación y realizar una comparación directa entre distintos métodos de educación.
+1) Aplicar A/B testing: comparar la metodología del videojuego educativo con otra aplicación o la lectura de un artículo relacionado con la misma materia que busca enseñar el videojuego. Luego, evaluar a los estudiantes con un examen escrito más extenso para establecer una graduación y realizar una comparación directa entre distintos métodos de educación.
 
-2) Idealmente, tomar una muestra aleatoria de estudiantes que estén cursando Algoritmos y Estructuras de Datos y mostrarles el videojuego. Posteriormente, realizar un examen y medir las diferencias entre el grupo que probó el videojuego y el grupo que no lo hizo. Sin embargo, esto requiere apoyo institucional y garantizar la inclusión de la materia de grafos en el curso.
+2) Tomar una muestra aleatoria de estudiantes: Idealmente seleccionar personas que estén cursando Algoritmos y Estructuras de Datos y mostrarles el videojuego. Posteriormente, realizar un examen y medir las diferencias entre el grupo que probó el videojuego y el grupo que no lo hizo. Sin embargo, esto requiere apoyo institucional y garantizar la inclusión de la materia de grafos en el curso.
 
 Un aspecto a mejorar es que el videojuego no tiene componentes sociales, tales como multijugador, ya sea de forma competitiva o cooperativa. Estos elementos se descartaron debido a la dificultad para aplicar pruebas de usuario multijugador y la complejidad de agregar cooperatividad o competitividad a nivel de diseño. El modelo MEEGA+ \cite{meegaplus} busca evaluar también esta dimensión social. Para objeto de la evaluación de la calidad de juego, las preguntas relacionadas con este item se omitieron en el formulario.
+
 Por otra parte, no se puede garantizar la heterogeneidad de la muestra. Existe el sesgo del voluntario, que afecta según \cite{volunterBias}. El caso ideal implica una separación aleatoria en los cursos como parte de las actividades de la clase. No obstante, es probable que aún existan sesgos en los cursos debido a la selección de estudiantes de carreras asociadas a computación o informática. Se recomienda acotar el grupo solo a estudiantes afines a la informática. Por esta misma razón, también se aconseja acotar estos estudios únicamente a estudiantes de carreras relacionadas con STEM y agregar segmentación.
 
 %  Por otra parte, existe el sesgo de novedad. % CITAR
@@ -47,7 +48,7 @@ Finalmente, el autor de este trabajo no es un diseñador de videojuegos y su pri
 
 En el futuro, esta aplicación o sus derivaciones podrían evaluarse en otros contextos, con muestras más extensas, para garantizar una validez estadística más sólida. Se recomienda la implementación de un diseño experimental que mitigue sesgos como el factor de novedad y el sesgo del voluntario. Además, se sugiere medir los resultados del aprendizaje en distintos intervalos temporales al utilizar esta aplicación. Considerando que la aplicación fue concebida como un complemento a la enseñanza tradicional y para ser utilizada en pausas activas, se propone estudiarla en grupos donde se haya empleado como herramienta complementaria y comparar los resultados con otro grupo que no la haya utilizado.
 
-Una mejora en la recolección de datos sería la aplicación de principios de telemetría y el uso de tecnologías adicionales que profundicen en el estudio de usabilidad y experiencia del usuario. Hay frameworks que sirven como servidor para aplicaciones relacionadas con videojuegos y ofrecen servicios de telemetría y análisis de datos, como PlayFab \cite{PlayFabTelemetry}. Tecnologías como eye-tracking o biofeedback podrían proporcionar una comprensión más detallada y estandarizada de la experiencia de los usuarios con el videojuego, identificando áreas de mejora \cite{Zain2011EyeTI}. Por ejemplo, se espera que los usuarios visualicen el código cada vez que realizan un paso, y esto podría confirmarse mediante eye-tracking. En el trabajo de \cite{Zain2011EyeTI}, se observa cómo los usuarios interactúan con las interfaces en un videojuego educativo.
+Una mejora en la recolección de datos sería la aplicación de principios de telemetría y el uso de tecnologías adicionales que profundicen en el estudio de usabilidad y experiencia del usuario. Existen frameworks que sirven como servidor para aplicaciones relacionadas con videojuegos y que ofrecen servicios de telemetría y análisis de datos, como PlayFab \cite{PlayFabTelemetry}. Tecnologías como eye-tracking o biofeedback podrían proporcionar una comprensión más detallada y estandarizada de la experiencia de los usuarios con el videojuego, identificando áreas de mejora \cite{Zain2011EyeTI}. Por ejemplo, se espera que los usuarios visualicen el código cada vez que realizan un paso, y esto podría confirmarse mediante eye-tracking. En el trabajo de \cite{Zain2011EyeTI}, se observa cómo los usuarios interactúan con las interfaces en un videojuego educativo.
 
 Una posible expansión de este trabajo implica la exploración de otras estructuras de datos y algoritmos que no necesariamente estén vinculados a los grafos. El software desarrollado está diseñado para ser adaptable a otros algoritmos, aunque requeriría trabajo adicional para determinar visualizaciones, representaciones y mecánicas específicas para cada uno.
 
