--- a/Tesis/main.tex
+++ b/Tesis/main.tex
@@ -22,8 +22,8 @@
 %\coguia{Nombre Completo Co-Guía} % incluir en caso de co-guía de *tesis*
 
 %\cotutela{Nombre Institución} % incluir en caso de cotutela
-
-\comision{Nombre Completo Uno,Nombre Completo Dos,Nombre Completo Tres}
+% TODO: Agregar comision
+% \comision{Nombre Completo Uno,Nombre Completo Dos,Nombre Completo Tres}
 
 %\auspicio{Nombre Institución} % incluir en caso de recibir financiamiento
 
@@ -37,7 +37,7 @@
 
 \begin{resumen}
 % citas \cite{meegaplus}, pero no excelente \cite{MeegaPlusManual}
-Los videojuegos educativos son reconocidos como herramientas motivadoras para enseñar y entretener a los estudiantes. Con el fin de validar estas afirmaciones, se han desarrollado diversos marcos de trabajo y se han realizado revisiones de literatura analizando el estado de arte y criticando cómo se realizan los estudios relacionados a videojuegos educativos. En este proyecto, se presenta IGACSE, un videojuego educativo diseñado para enseñar conceptos de grafos y los algoritmos BFS y DFS. Se utilizó la metodología MEEGA+  para evaluar la calidad de la aplicación, solicitando a dos grupos que probaran el juego y respondieran cuestionarios donde se le pregunta a los participantes por su percepción respecto del juego. El primero (N=15) realizó una prueba académica después de contestar el formulario. Este grupo, sin conocimiento previo de grafos, obtuvo una puntuación perfecta después de haber probado el videojuego y calificó al juego como bueno según la metodología MEEGA+. El segundo grupo (N=13), aquel que no realizó la prueba académica, dio una puntuación similar. Esto sugiere que el juego facilitó el aprendizaje de los estudiantes, pero se identifican espacios de mejora a nivel de diseño de juego. Por otra parte, se requieren más pruebas con distintas metodologías de estudio y tamaños muestrales más significativos para dar mayor validez científica a los resultados. La percepción de los usuarios señaló posibles áreas de mejora en usabilidad, interfaz y gamificación. La arquitectura de software desarrollada permite su reutilización con otros algoritmos y estructuras de datos. Además, se proporcionan pautas para obtener resultados más precisos en futuras investigaciones relacionadas.
+Los videojuegos educativos son reconocidos como herramientas motivadoras para enseñar y entretener a los estudiantes. Con el fin de validar estas afirmaciones, se han desarrollado diversos marcos de trabajo y se han realizado revisiones de literatura analizando el estado de arte y criticando cómo se realizan los estudios relacionados a videojuegos educativos. En este proyecto, se presenta IGACSE, un videojuego educativo diseñado para enseñar conceptos de grafos y los algoritmos BFS y DFS. Se utilizó la metodología MEEGA+  para evaluar la calidad de la aplicación, solicitando a dos grupos que probaran el juego y respondieran cuestionarios donde se le pregunta a los participantes por su percepción respecto del juego. El primero (N=15) realizó una prueba académica después de contestar el formulario. Este grupo, sin conocimiento previo de grafos, obtuvo una puntuación perfecta después de haber probado el videojuego y calificó al juego como bueno según la metodología MEEGA+. El segundo grupo (N=15), aquel que no realizó la prueba académica, dio una puntuación similar. Esto sugiere que el juego facilitó el aprendizaje de los estudiantes, pero se identifican espacios de mejora a nivel de diseño de juego. Por otra parte, se requieren más pruebas con distintas metodologías de estudio y tamaños muestrales más significativos para dar mayor validez científica a los resultados. La percepción de los usuarios señaló posibles áreas de mejora en usabilidad, interfaz y gamificación. La arquitectura de software desarrollada permite su reutilización con otros algoritmos y estructuras de datos. Además, se proporcionan pautas para obtener resultados más precisos en futuras investigaciones relacionadas.
 
 
 \end{resumen}
