--- a/Tesis/metodologia.tex
+++ b/Tesis/metodologia.tex
@@ -1,10 +1,16 @@
 \chapter{Diseño experimental: Metodología}
 
-El objetivo de este trabajo era poner a prueba las hipótesis de que un videojuego educativo puede enseñar algoritmos relacionados a grafos, y que puede mantener a los estudiantes motivados y enfocados en la tarea que se les pide realizar. 
+El objetivo de este trabajo fue poner a prueba la hipótesis de que un videojuego educativo puede enseñar algoritmos relacionados a grafos y que puede ser percibido positivamente por parte de los estudiantes.
 
-La forma de comprobar tales hipótesis es mediante un experimento donde se le pide a personas voluntarias responder ciertas preguntas después de probar la aplicación. Esta se considera una metodología simple según \cite{HowGamesComputingEducationEvaluated} y no es la ideal, pues, para este tipo de estudios, el caso ideal es una metodología pre/post/post con un tamaño muestral de 40 individuos o superior. Sin embargo, este tipo de estudios requieren más tiempo por parte de los vol untarios, mayores incentivos a la participación y apoyo institucional. Un ejemplo de esto último corresponde al caso en que la participación sea una actividad pedagógica en un curso y exigir que esta sea obligatoria.
+La comprobación de tales hipótesis se llevó a cabo mediante un experimento donde se le pide a personas voluntarias responder ciertas preguntas después de probar la aplicación. Esta se considera una metodología simple según \cite{HowGamesComputingEducationEvaluated}. 
 
-Se sugieren buenas prácticas metodológicas en \cite{Rogers2002InteractionDesign, MeegaPlusManual, HowGamesComputingEducationEvaluated}, donde se define un conjunto de ideas primarias, comprendiendo cuáles son las dificultades a resolver. Posteriormente, hacer validaciones con tamaños muestrales significativos y representativos del usuario a quien está destinado el trabajo, además de tratar de apoyarse con tecnologías como eye-tracking y telemetría. Sin embargo, se hizo complejo obtener voluntarios para participar en las pruebas, sobretodo considerando que aquellas personas que participaran en una prueba después no podrían formar parte de las pruebas finales, que se consideraban más relevantes.
+Este tipo de metodología no es ideal en este tipo de estudios \cite{HowGamesComputingEducationEvaluated}. La mayor validez científica se da con una metodología pre/post/post con un tamaño muestral de 40 individuos o más. 
+
+Sin embargo, este tipo de estudios requieren más tiempo por parte de los voluntarios, mayores incentivos a la participación y respaldo institucional. Por ejemplo, la participación podría ser una actividad pedagógica en un curso y exigir que sea obligatoria.
+
+Se sugieren buenas prácticas metodológicas en \cite{Rogers2002InteractionDesign, MeegaPlusManual, HowGamesComputingEducationEvaluated}, donde se define un conjunto de ideas primarias, identificando cuáles son las dificultades a resolver. 
+
+Además, realizar validaciones con tamaños muestrales significativos y representativos del usuario al que está destinado el trabajo. También se sugiere aprovechar tecnologías como eye-tracking y telemetría. Sin embargo, se hizo complejo obtener voluntarios para participar en las pruebas, sobretodo considerando que aquellas personas que participaran en una prueba después no podrían formar parte de las pruebas finales, que se consideraban más relevantes.
 
 
 \section{Fases del trabajo de investigación}
@@ -13,17 +19,17 @@ El trabajo se dividió en tres fases, las cuales constaron de distintas pregunta
 
 \subsection{Fase exploratoria}
 
-En esta primera fase, el objetivo era recopilar retroalimentación y opiniones de usuarios de manera abierta, utilizando metodologías de pensamiento en voz alta con personas experimentadas en grafos. Se optó por esta metodología por dos razones. En primer lugar, si un usuario conoce el algoritmo y la estructura de datos pero no comprende el videojuego, entonces existen problemas de usabilidad, justificando comenzar con personas expertas.
+En esta primera fase, el objetivo fue recopilar retroalimentación y opiniones de usuarios de manera abierta, utilizando metodologías de pensamiento en voz alta con personas experimentadas en grafos. Se optó por esta metodología por dos razones. En primer lugar, si un usuario conoce el algoritmo y la estructura de datos pero no comprende el videojuego, entonces existen problemas de usabilidad, justificando el enfoque inicial con personas expertas.
 
-En segundo lugar, los usuarios expertos tienden a expresarse de manera más natural cuando pueden emitir opiniones en el momento, por lo que se prefirió no utilizar una encuesta o escala posterior a la experiencia. Resulta crucial que los expertos expresen sus impresiones a medida que los elementos del videojuego aparecen en pantalla y no después de la experiencia, para comprender mejor lo que sienten al usar la aplicación por primera vez. Hay animaciones que deben captar la atención en el momento, como la pista visual del ratón indicando al usuario que haga clic izquierdo en un planeta.
+En segundo lugar, los usuarios expertos tienden a expresarse de manera más natural cuando pueden emitir opiniones en el momento, por lo que se prefirió evitar encuestas o escalas posteriores a la experiencia. Resulta crucial que los expertos expresen sus impresiones a medida que los elementos del videojuego aparecen en pantalla y no después de la experiencia, para comprender mejor lo experimentado al usar la aplicación por primera vez. Hay animaciones que deben captar la atención en el momento, como la pista visual del ratón indicando al usuario que haga clic izquierdo en un planeta.
 
-Se dio por concluida esta fase una vez que los resultados de las pruebas de usuario mejoraron y se observó que cinco usuarios expertos pudieron completar la prueba de principio a fin sin inconvenientes ni pedir ayuda. Estas cinco personas debían cumplir la condición de no tener conocimiento previo sobre el juego.
+Esta fase concluyó una vez que se observó que cinco usuarios expertos pudieron completar la prueba de principio a fin sin inconvenientes ni necesidad de pedir ayuda. Estas cinco personas debían cumplir la condición de no tener conocimiento previo sobre el juego.
 
 \subsection{Fase de evaluación académica y percepción de usuario}
 
-En esta fase, se logró la participación completa de una muestra de 15 personas, a quienes se les ofreció un incentivo monetario para evitar sesgos asociados del voluntario y conseguir más personas \cite{Marinescu2018IncentivesCR, Dallmeyer2023ToPayOrNot}.
+En esta fase, se logró la participación completa de una muestra de 15 personas, a quienes se les ofreció un incentivo monetario para evitar sesgos asociados a la voluntariedad y para aumentar la participación \cite{Marinescu2018IncentivesCR, Dallmeyer2023ToPayOrNot}.
 
-Para iniciar esta etapa, se realizó una convocatoria voluntaria en el foro de las secciones de Algoritmos y Estructuras de Datos de la Universidad de Chile durante el semestre de primavera del año 2023. Se ofreció una remuneración a todas las personas que completaran la experiencia, que tenía una duración promedio de 45 minutos y constaba de tres partes: realizar la prueba de usuario, completar un formulario que utilizaba la escala de Likert basado en el modelo MEEGA+ \cite{meegaplus}, y responder a una prueba escrita basada en exámenes previos del curso Algoritmos y Estructuras de Datos.
+Para iniciar esta etapa, se realizó una convocatoria voluntaria en el foro de las secciones de Algoritmos y Estructuras de Datos de la Universidad de Chile durante el semestre de primavera del año 2023. Se ofreció una remuneración a todas las personas que completaran la experiencia, que tenía una duración promedio de 45 minutos. La experiencia constaba de tres partes: realizar la prueba de usuario, completar un formulario que utilizaba la escala de Likert basado en el modelo MEEGA+ \cite{meegaplus}, y responder a una prueba escrita basada en exámenes previos del curso Algoritmos y Estructuras de Datos.
 
 El modelo sistemático MEEGA+ \cite{meegaplus} está diseñado para evaluar videojuegos educativos, buscando evaluar la percepción de la calidad de un videojuego desde la perspectiva del estudiante en el contexto de la enseñanza de la computación. El formulario utilizado en este estudio, basado en MEEGA+ \cite{meegaplus}, se encuentra en el \hyperref[AnexoA]{anexo A}.
 
