--- a/Tesis/resultados.tex
+++ b/Tesis/resultados.tex
@@ -2,11 +2,9 @@
 
 \section{Resultados durante la fase exploratoria}
 
-Inicialmente, tras finalizar el nivel o jugar durante 12 minutos, se pidió a usuarios expertos que evaluaran la usabilidad del juego en una escala del 1 al 10.
+Inicialmente, tras finalizar el nivel o jugar durante 12 minutos, se pidió a usuarios expertos que evaluaran la usabilidad del juego en una escala del 1 al 10. Se realizaron tres iteraciones utilizando esta metodología, junto con la recopilación de comentarios abiertos. 
 
-Se realizaron tres iteraciones utilizando esta metodología, junto con la recopilación de comentarios abiertos. En la primera fase, la usabilidad promedio entre 4 usuarios fue de 2.5.
-
-Posteriormente, después de implementar las sugerencias previas, la usabilidad aumentó a 6 con una muestra de 4 usuarios. Sin embargo, los usuarios señalaron la facilidad para cometer errores y la monotonía del juego, así como la necesidad de leer mucho, lo cual generaba insatisfacción, a pesar de entender las acciones posibles.
+En la primera fase, la usabilidad promedio entre 4 usuarios fue de 2.5. Posteriormente, después de implementar las sugerencias previas, la usabilidad aumentó a 6 con una muestra de 4 usuarios. Sin embargo, los usuarios señalaron la facilidad para cometer errores y la monotonía del juego, así como la necesidad de leer mucho, lo cual generaba insatisfacción, a pesar de entender las acciones posibles.
 
 Finalmente, antes de probar con el público objetivo, se llevó a cabo una última prueba con una muestra de 6 usuarios, obteniendo un promedio de calificación de 8 sobre 10. En este caso, los usuarios mencionaron problemas menores, principalmente relacionados con la interpretación de algunas animaciones o la falta de indicaciones, como la necesidad de presionar ENTER para avanzar en el código.
 
@@ -41,6 +39,6 @@ En el anexo \hyperref[AnexoF]{Anexo F} se muestran los comentarios abiertos que 
 
 \section{Resultados de la encuesta libre}
 
-Esta encuesta sigue libre al momento de la escritura de esta tesis. Hasta ahora, se han recolectado 11 respuestas. El resultado de la percepción con la metodología \cite{meegaplus} es un  $\theta = 0.616$. Los resultados se encuentran en los anexos de forma análoga a las respuestas posteriores. Se observa un valor $\theta$ más alto que en el caso anterior. Además, los comentarios abiertos muestran una actitud de mayor aceptación con respecto al grupo que se expuso a la prueba académica. Esto se puede deber al sesgo del voluntario \cite{volunterBias}, puesto que la comunidad que participó de este trabajo es una comunidad indie de creación de videojuegos, por lo que aprecian cada aspecto de los videojuegos y reconocen la dificutad de realizarlos.
+Esta encuesta permanece aberta en el momento de la redacción de esta tesis. Hasta ahora, se han recolectado 15 respuestas. El resultado de la percepción con la metodología \cite{meegaplus} es un  $\theta = 0.616$. Los resultados se encuentran en los anexos de forma análoga a las respuestas posteriores. Se observa un valor $\theta$ más alto que en el caso anterior. Además, los comentarios abiertos muestran una actitud de mayor aceptación con respecto al grupo que se expuso a la prueba académica. Esto puede atribuirse al sesgo del voluntario \cite{volunterBias}, puesto que la comunidad que participó de este trabajo es una comunidad de creación de videojuegos, por lo que aprecian cada aspecto de los videojuegos y reconocen la dificutad de crearlos.
 
 Nuevamente, en el anexo \hyperref[AnexoF]{Anexo F} se muestran los comentarios abiertos que se exigen en la metodología MEEGA+ \cite{meegaplus}. Las respuestas están separadas con respecto al grupo anterior. 
